# pyjuice

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  start.html
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree  start.doctree
.doctrees/getting-started/: installation.doctree  tutorials_index.doctree
.doctrees/python-api/: nodes.doctree  optim.doctree  pyjuice.doctree  queries.doctree  structures.doctree  tensorcircuit.doctree
.github/workflows/: build_docs.yml  build_documentation.yml  ci_tests.yml  publish.yml
_downloads/0749894295c4ed0d731492395c04895e/: train_hmm.py
_downloads/1a2ac70a45ac54e795a68eba2b506320/: 02_construct_hmm.py
_downloads/2e145951c19f5006f1bdad9dcdd41f8d/: train_mnist_pdhclt.ipynb
_downloads/3988e2237cc0401749dcb522c104a647/: 05_common_transformations.ipynb
_downloads/3dc6334404121f1adc55f4e2108f25f1/: train_mnist_pd.ipynb
_downloads/438b4d470415e8851fc30a112d3291db/: train_hmm.ipynb
_downloads/503c3398b22275c2e286501bd6218cf1/: 03_query_pc.py
_downloads/5b198da5a101bf5263f97b980527d5e8/: 04_query_pc.py
_downloads/694823d0ae682a6c4a4f61fca73ebd04/: train_mnist_hclt.py
_downloads/7ff11b12ec868d047316f4d2855d2452/: train_mnist_hclt.ipynb
_downloads/94056bd45c0afc58d516144c0928bf8b/: 02_construct_simple_pc.ipynb
_downloads/98af5691e8ad8988475715c3bc3ee47e/: train_mnist_pd.py
_downloads/a6f4e70e566387d03c9a1773c5f52cdb/: 03_construct_hmm.ipynb
_downloads/ab853d12dcf8246e42ce1eb5d40a84fb/: 02_construct_simple_pc.py
_downloads/aef0a86e373771ba745406f9889513e4/: 04_query_pc.ipynb
_downloads/ceabde479c39a0dcb17a32f5f14a7139/: 01_train_pc.py
_downloads/de85622651cd6e1d1c49a94204eca646/: 03_query_pc.ipynb
_downloads/e598bde225aeff7f7f120dd63eb87317/: 01_train_pc.ipynb
_sources/: index.rst.txt
_sources/getting-started/: installation.rst.txt
_sources/python-api/: nodes.rst.txt  optim.rst.txt  structures.rst.txt  tensorcircuit.rst.txt
docs/examples/: README.rst
docs/source/: api.rst  conf.py  index.rst  start.rst
examples/: 01_train_pc.py  02_construct_simple_pc.py  03_construct_hmm.py  03_query_pc.py  05_common_transformations.py  README.rst  train_hmm.py  train_mnist_hclt.py  train_mnist_pd.py  train_mnist_pdhclt.py
examples/1_pc_training/: train_mnist_hclt.py
examples/2_hybrid_model/: train_hybrid.py  train_pc_flows_hybrid.py  vae.py
examples/2_hybrid_models/: train_pc_flows_hybrid.py  train_pc_vae_hybrid.py
getting-started/: installation.html  tutorials_index.html
getting-started/tutorials/: 01_train_pc.html  02_construct_hmm.html  02_construct_simple_pc.html  03_construct_hmm.html  03_query_pc.html  04_query_pc.html  (+10 more)
python-api/: nodes.html  optim.html  pyjuice.html  queries.html  structures.html  tensorcircuit.html
tests/: backward_test.py  conftest.py  forward_backward_test.py  model_hook_test.py
(+281 files in other folders)
