[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjuice"
version="2.0.1"
description = "Probabilistic Circuits Library"
dependencies = [
    "numpy",
    "torch>=2.2.0",
    "typing",
    "triton>=2.2.0",
    "networkx",
    "numba",
    "packaging",
    "matplotlib",
    "tqdm"
]
authors = [
    {name="StarAI", email="guyvdb@cs.ucla.edu"},
]

[options.packages.find]
where = "src"

[tool.setuptools.dynamic]
readme = {file = "README.md"}


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
