[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjuice"
version="2.4.0"
description = "Probabilistic Circuits Library"
dependencies = [
    "numpy",
    "torch>=2.2.0",
    "typing",
    "triton>=2.2.0",
    "networkx",
    "numba",
    "packaging",
    "matplotlib",
    "tqdm"
]
authors = [
    {name="Anji Liu", email="anjiliu@comp.nus.edu.sg"},
    {name="StarAI", email="guyvdb@cs.ucla.edu"},
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-skip-slow",
    "torchvision",
    "datasets",
    "matplotlib"
]

[options.packages.find]
where = "src"

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests/"
]
